jm/GH-15-claimed-api (#8)
* Adding prisma readme and seed

* Ignoring yarn cache

* Adding package changes, node type might be wrong version.

* Modifying model and adding migrations

* Adding Prisma notes to README.md

* Working storage, mocked image upload

* undoing gitignore changes

* undoing git ignore changes

* API WiP

* New APIs + documentation

* Updating for comma consistency

* Addressing PR Comments

* PR Comments
